fix (?) erratic jump to next sentence
also, skip over <sup> during TTS

--- a/overlay.css
+++ b/overlay.css
@@ -219,16 +219,18 @@ html.rv-active body {
     margin-right: 2px;
 }
 .rv-tts-highlight {
-  background: rgba(200, 255, 50, .2);
+  background: rgba(235, 150, 0, 0.25);
   border-radius: 4px;
-  box-shadow: 2px 2px rgba(255, 150, 0, 0.8);
+  box-shadow: 2px 2px rgba(235, 150, 0, 0.8);
   transition: background .2s ease;
 }
 .rv-tts-inactive {
-  box-shadow: 2px 2px rgba(250, 210.22, 100, 0.6);
+  background: rgba(220, 180, 220, 0.25);
+  box-shadow: 2px 2px rgba(220, 180, 220, 0.8);
 }
 .rv-tts-reading{
-  box-shadow: 2px 2px rgba(200, 255, 50, 0.7);
+  background: rgba(170, 220, 90, 0.25);
+  box-shadow: 2px 2px rgba(170, 220, 90, 0.8);
 }
 .rv-rating-control {
     font-size: 0.85em;
